Several Mouse Look actuators not working well together when reset button are set in one or several of them #41074

Closed
opened 2014-07-15 00:43:49 +02:00 by Jorge Bernal · 11 comments
Member

System Information
N/A

Blender Version
Broken: 2.71.1
Worked: None

Short description of error
From SolarLune in blenderartists: http://blenderartists.org/forum/showthread.php?342994-MouseLook-Logic-Brick-Bugged
"I just tested out a recent build of Blender, and while the MouseLook logic brick works fine for one object, it bugs out for two (operating on a camera using only the X axis for looking up and down, and operating on the parent body for just rotating around the Z axis to point in a direction for movement)"

Exact steps for others to reproduce the error
Mouselookbugged.blend

**System Information** N/A **Blender Version** Broken: 2.71.1 Worked: None **Short description of error** From SolarLune in blenderartists: http://blenderartists.org/forum/showthread.php?342994-MouseLook-Logic-Brick-Bugged "I just tested out a recent build of Blender, and while the MouseLook logic brick works fine for one object, it bugs out for two (operating on a camera using only the X axis for looking up and down, and operating on the parent body for just rotating around the Z axis to point in a direction for movement)" **Exact steps for others to reproduce the error** [Mouselookbugged.blend](https://archive.blender.org/developer/F97843/Mouselookbugged.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Jorge Bernal self-assigned this 2014-07-15 00:43:49 +02:00
Author
Member

Added subscriber: @JorgeBernalMartinez

Added subscriber: @JorgeBernalMartinez
Author
Member

Added subscriber: @solarlune

Added subscriber: @solarlune
Author
Member

It is related to each mouse look actuator is trying to reset the mouse location at centre but after first reset the following actuators don't have a good mouse position reference. I will check.

It is related to each mouse look actuator is trying to reset the mouse location at centre but after first reset the following actuators don't have a good mouse position reference. I will check.

Added subscriber: @raco

Added subscriber: @raco

This comment was removed by @raco

*This comment was removed by @raco*
Author
Member

Added subscriber: @Moguri

Added subscriber: @Moguri
Author
Member

With this little fix the mouse look configuration showed by SolarLune works right.

With this little fix the mouse look configuration showed by SolarLune works right.

This issue was referenced by dbc79e7aba

This issue was referenced by dbc79e7aba4881cd3e61ad60433ef834965b6799

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit dbc79e7aba.

Closed by commit dbc79e7aba.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41074
No description provided.