Fix T41074: Several Mouse Look actuators not working well together when reset button are set in one or several of them

Fix provided by lordloki (Jorge Bernal)